--- a/src/components/header/MiddleHeader.css
+++ b/src/components/header/MiddleHeader.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex:1;
+    flex:2;
 
 
 }
@@ -12,9 +12,10 @@
     justify-content: center;
     align-items: center;
     margin:0 0.2rem;
-   height: 80%;
+   height: 3rem;
    width: clamp(4rem, 40%, 6rem);
    border-radius: 2px;
+   cursor: pointer;
 }
 .active{
     color:#4267B2;
@@ -22,7 +23,7 @@
 }
 
 .MenuIconContainer:hover{
-    background-color: #898f9ca8;
+    background-color: #898f9c79;
 }
 
 .circleIcon{
@@ -32,7 +33,7 @@
 }
 
 
-@media (max-width:600px) {
+@media (max-width:700px) {
     .middleHeader{
         display: none;
     }
