--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,21 @@
   display: flex;
   justify-content: space-between;
   background-color: #898f9c79;
-  overflow-x: hidden;
+  overflow-x:none ;
 }
 
+.postPopUP{
+  height: 100vh;
+  position: absolute;
+  top:0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.815);
+
+
+}
 
 
 @media (max-width:1200px) {
