--- a/src/components/Fields/storyReels/Stories.css
+++ b/src/components/Fields/storyReels/Stories.css
@@ -2,7 +2,7 @@
     background: linear-gradient(to bottom, rgba(9, 9, 12, 0.164), #4267b2da), url('../../images/bg.png');
     background-size: cover;
     background-repeat: no-repeat;
-    width:110px;
+    width:7rem;
     height:200px;
     border-radius: 10px;
     margin: 0.5rem;
@@ -35,4 +35,14 @@
      width:60%;
      font-weight: 500;
      color: aliceblue;
+}
+
+
+
+@media (max-width:600px) {
+    .stories{
+        width: 100%;
+        height: 11rem;
+        margin: 0.2rem;
+    }
 }
