--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+ 
+html, body {
+  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
