--- a/src/components/Fields/posts/PostHeader.css
+++ b/src/components/Fields/posts/PostHeader.css
@@ -4,6 +4,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 1rem 0 1rem;
+    position: relative;
+  
 
   
     
@@ -34,4 +36,25 @@
 
 .optionIcon:hover{
   background-color: #898f9c79;
+}
+.postOption{
+    position: absolute;
+    right:2rem;
+    top:3rem;
+    background-color: #898f9c79;
+    width: 30%;
+    padding: 0.5rem;
+    border-radius: 1rem;
+    margin: 0.5 0;
+}
+
+.postOption>p{
+    padding: 0.5rem;
+   border-radius: 1rem;
+   font-family:Arial, Helvetica, sans-serif;
+   cursor: pointer;
+}
+.postOption> p:hover{
+   background-color: #6b6d7279;
+
 }
