--- a/src/components/Fields/PopupPost/PopUp.css
+++ b/src/components/Fields/PopupPost/PopUp.css
@@ -9,14 +9,24 @@
 
 
 .textArea{
-    width: 20rem;
-    height: 10rem;
+    width: 90%;
+    height: auto;
     font-size: 1.5rem;
     border:none;
     outline: none;
     overflow-y: hidden;
    
 
+}
+.imgPreview{
+   width: 100%;
+   height: 100%;
+   border-radius: 0;
+}
+
+.imagePreviewCon{
+    width:100%;
+    height: 8rem;
 }
 
 .clear{
