--- a/src/components/Fields/storyReels/StoryReels.css
+++ b/src/components/Fields/storyReels/StoryReels.css
@@ -29,9 +29,62 @@
     margin: 0 0.2rem;
     
 }
+.createStory{
+    width:7rem;
+    height:200px;
+    border-radius: 10px;
+    margin: 0.5rem;
+    position: relative;
+    background-color: #898f9c49;
+    cursor: pointer;
+
+  
+}
+
+.displayImg{
+    width: 100%;
+    height: 70%;
+}
+
+.displayImg>img{
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+}
+.plusIcon{
+    height: 2rem;
+    width:2rem;
+    background-color: #4267B2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border: 3px solid  #f8f8f8ad;
+    position: absolute;
+    bottom:20%;
+    right: 35%;
+
+  
+}
+
+.createStory > p {
+    font-size: 1rem;
+    font-family:'Times New Roman', Times, serif;
+    position: absolute;
+    bottom: 5%;
+    text-align: center;
+    width: 100%;
+}
+
+
 
 @media (max-width:600px) {
     .storyReels{
         width: 100%;
     }
+  .createStory{
+            width: 100%;
+            height: 11rem;
+            margin: 0.2rem;
+      }
 }
