--- a/src/components/signUpPage/SignUpForm.css
+++ b/src/components/signUpPage/SignUpForm.css
@@ -10,6 +10,10 @@ p{
     color: #393d44;
     margin-bottom: 0.5rem;
 }
+h5{
+    color:red;
+    text-align: center;
+}
 form {
     display: flex;
     flex-direction: column;
